# Sketch2Art

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.conf  pyproject.toml
backend/: app.py  style_list.yaml
backend/static/css/: index.css
backend/static/js/: index.js
backend/templates/: index.html
frontend/: doodle2image.py
