[tool.poetry]
name = "vision-agent"
version = "0.1.0"
description = ""
authors = ["Creeper Eye <iostream1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
pyqt6 = "^6.7.1"
opencv-python = "^4.10.0.84"
pyqt6-webengine = "^6.7.0"
pyinstaller = "^6.11.1"
yt-dlp = "^2024.11.4"
ffmpeg = "^1.4"
opencv-contrib-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
